--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Priya Tripathi</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
 	</head>
 	<body>
 		<nav>
