--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Priya Tripathi!</h1>
-				<p>Ambivert, Sometimes extrovert, Drunk without Liquor<a href="/about">Read more about my life...</a></p>
+				<p>Ambivert, Sometimes extrovert, Drunk without Liquor
+					<br/>
+<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
