--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Priya Tripathi!</h1>
-				<p>Ambivert, Sometimes extrovert, Drunk without Liquor
+				<p>Ambivert, Sometimes extrovert, Drunk without Liquor <span> <h3 style={{ display: "inline" }}>&#128540;</h3> </span>
 					<br/>
 <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
