--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
 
     <header id="header">
-      <img src="logo.jpg">
+      <img src="logo.png">
       <h1>Priya R Tripathi</h1>
       <ul class="main-menu">
         <li><a href="#home">Home</a></li>
