--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ Github pages is so cool. 😎
             <h2>Contact</h2>
             <p>
 		    <ul>
-              <a href="https://www.instagram.com/pepperbird_/"
+             <li> <a href="https://www.instagram.com/pepperbird_/"
         target="_blank"
-        rel="noopener noreferrer"><i style="font-size:48px" class="fa">&#xf16d;</i></a>
-		    <li><a href="mailto:priyaraj.tripathi67@gmail.com">email</a></li>
-        		<li><a href="https://github.com/priya-tripathi">github.com/priya-tripathi</a></li>
+		     rel="noopener noreferrer"><i style="font-size:48px" class="fa">&#xf16d;</i></a></li>
+		    <li><a href="mailto:priyaraj.tripathi67@gmail.com"><i class="fa fa-envelope"></i></a></li>
+        		<li><a href="https://github.com/priya-tripathi"><i class="fa fa-github"></i></a></li>
 		  </ul>
             </p>
           </div>
