--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@ Github pages is so cool. 😎
              <li> <a href="https://www.instagram.com/pepperbird_/"
         target="_blank"
 		     rel="noopener noreferrer"><i style="font-size:48px" class="fa">&#xf16d;</i></a></li>
-		    <li><a href="mailto:priyaraj.tripathi67@gmail.com"><i class="fa fa-envelope"></i></a></li>
-        		<li><a href="https://github.com/priya-tripathi"><i class="fa fa-github"></i></a></li>
+		    <li><a href="mailto:priyaraj.tripathi67@gmail.com"><i class="fa fa-envelope" style="font-size:48px"></i></a></li>
+        		<li><a href="https://github.com/priya-tripathi" target="_blank"
+		     rel="noopener noreferrer"><i class="fa fa-github" style="font-size:48px"></i></a></li>
 		  </ul>
             </p>
           </div>
