--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Github pages is so cool. 😎
             <h2>About</h2>
             <p>
 		    Hi I am Priya!
-			I come from a city named Aurangabad, Maharashtra, India. I have travelled and lived in many places as a kid. Currently I am in Sydney.
+			I come from a city named Lucknow, Uttar Pradesh, India. I have travelled and lived in many places as a kid. Currently I am in Sydney.
 		    My hobbies vary from time to time  <h3 style={{ display: "inline" }}>&#128540;</h3>
 		  But permanent ones are painting, travelling, and some coding often.
               
@@ -63,7 +63,7 @@ Github pages is so cool. 😎
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-		    <ul>
+		    <ul style="list-style-type: none;">
              <li> <a href="https://www.instagram.com/pepperbird_/"
         target="_blank"
 		     rel="noopener noreferrer"><i style="font-size:48px" class="fa">&#xf16d;</i></a></li>
