--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Github pages is so cool. 😎
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-		    <ul style="list-style-type: none;">
+		    <ul style="list-style-type: none; display:inline-block;">
              <li> <a href="https://www.instagram.com/pepperbird_/"
         target="_blank"
 		     rel="noopener noreferrer"><i style="font-size:48px" class="fa">&#xf16d;</i></a></li>
