--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </ul>                 
     </header>
    
-    <div id="container" style="font-family:"Papyrus"">
+    <div id="container" style="font-family:"Papyrus";">
       <div class="inner">
         <div id="content"> 
           
