--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div id="contact" class="content-region hide">
-          <h2>Contact</h2>
+          <h2>Got some feedback?</h2>
           <p>
           <ul class="contact-list" style="list-style-type: none;">
             <!--              <li> <a href="https://www.instagram.com/pepperbird_/"
