--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <div id="contact" class="content-region hide">
           <h2>Got some feedback?</h2>
           <p>
-          <ul class="contact-list" style="list-style-type: none;">
-            <!--              <li> <a href="https://www.instagram.com/pepperbird_/"
+            <!-- <ul class="contact-list" style="list-style-type: none;">
+                          <li> <a href="https://www.instagram.com/pepperbird_/"
         target="_blank"
-		     rel="noopener noreferrer"><i style="font-size:48px" class="fa">&#xf16d;</i></a></li> -->
+		     rel="noopener noreferrer"><i style="font-size:48px" class="fa">&#xf16d;</i></a></li> 
             <br />Connect me on LinkedIn
             <li><a href="https://www.linkedin.com/in/priya-r-tripathi-21ab7a1a/" target="_blank"
                 rel="noopener noreferrer"><i class="fa fa-linkedin" style="font-size:48px"></i></a></li>
@@ -83,7 +83,24 @@
             </li><br />
             View my projects <li><a href="https://github.com/priya-tripathi" target="_blank"
                 rel="noopener noreferrer"><i class="fa fa-github" style="font-size:48px"></i></a></li>
-          </ul>
+          </ul> -->
+          <table class="contact-table">
+            <tr>
+              <td>Connect me on LinkedIn</td>
+              <td><a href="https://www.linkedin.com/in/priya-r-tripathi-21ab7a1a/" target="_blank"
+                  rel="noopener noreferrer"><i class="fa fa-linkedin" style="font-size:48px"></i></a></td>
+            </tr>
+            <tr>
+              <td>Or Email me</td>
+              <td><a href="mailto:priyaraj.tripathi67@gmail.com"><i class="fa fa-envelope"
+                    style="font-size:48px"></i></a></td>
+            </tr>
+            <tr>
+              <td>View my projects</td>
+              <td><a href="https://github.com/priya-tripathi" target="_blank" rel="noopener noreferrer"><i
+                    class="fa fa-github" style="font-size:48px"></i></a></td>
+            </tr>
+          </table>
           </p>
         </div>
 
