--- a/index.html
+++ b/index.html
@@ -66,6 +66,56 @@
             can be used to achieve anything.
 
           </p>
+		<div class="bg-gradient_solid">
+  <div class="container">
+    <div class="section-header">
+      <h2>My story</h2>
+      <hr>
+    </div>
+    <div class="steps">
+      <div class="steps-container">
+        <div class="content">
+          <h2>Domain Group</h2>
+          <p>Software Engineer</p>
+        </div>
+        <i class="step-line"></i>
+        <div class="date">2021</div>
+      </div>
+      <div class="steps-container">
+        <div class="content">
+          <h2>Shootsta</h2>
+          <p>Full Stack Engineer</p>
+        </div>
+        <i class="step-line"></i>
+        <div class="date">2020</div>
+      </div>
+      <div class="steps-container">
+        <div class="content">
+          <h2>Instarent</h2>
+          <p>Full Stack Engineer</p>
+        </div>
+        <i class="step-line"></i>
+        <div class="date">2020</div>
+      </div>
+      <div class="steps-container">
+        <div class="content">
+          <h2>Sahastra Packaging Pvt. Ltd</h2>
+          <p>Application Developer</p>
+        </div>
+        <i class="step-line"></i>
+        <div class="date">2017</div>
+      </div>
+      <div class="steps-container">
+        <div class="content">
+          <h2>IBM</h2>
+          <p>Software Engineer</p>
+        </div>
+        <i class="step-line"></i>
+        <div class="date">2014</div>
+      </div>
+    </div>
+  </div>
+</div>
         </div>
 
         <div id="contact" class="content-region hide">
