--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Custom styles -->
-  <link href="/css/index.css" rel="stylesheet" type="text/css" />
+  <link href="css/index.css" rel="stylesheet" type="text/css" />
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 
@@ -66,57 +66,56 @@
             can be used to achieve anything.
 
           </p>
-		https://codepen.io/alvarotrigo/pen/bGobepJ
-		<div class="bg-gradient_solid">
-  <div class="container">
-    <div class="section-header">
-      <h2>My story</h2>
-      <hr>
-    </div>
-    <div class="steps">
-      <div class="steps-container">
-        <div class="content">
-          <h2>Domain Group</h2>
-          <p>Software Engineer</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2021</div>
-      </div>
-      <div class="steps-container">
-        <div class="content">
-          <h2>Shootsta</h2>
-          <p>Full Stack Engineer</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2020</div>
-      </div>
-      <div class="steps-container">
-        <div class="content">
-          <h2>Instarent</h2>
-          <p>Full Stack Engineer</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2020</div>
-      </div>
-      <div class="steps-container">
-        <div class="content">
-          <h2>Sahastra Packaging Pvt. Ltd</h2>
-          <p>Application Developer</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2017</div>
-      </div>
-      <div class="steps-container">
-        <div class="content">
-          <h2>IBM</h2>
-          <p>Software Engineer</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2014</div>
-      </div>
-    </div>
-  </div>
-</div>
+          <div class="bg-gradient_solid">
+            <div class="container">
+              <div class="section-header">
+                <h2>My story</h2>
+                <hr>
+              </div>
+              <div class="steps">
+                <div class="steps-container">
+                  <div class="content">
+                    <h2>Domain Group</h2>
+                    <p>Software Engineer</p>
+                  </div>
+                  <i class="step-line"></i>
+                  <div class="date">2021</div>
+                </div>
+                <div class="steps-container">
+                  <div class="content">
+                    <h2>Shootsta</h2>
+                    <p>Full Stack Engineer</p>
+                  </div>
+                  <i class="step-line"></i>
+                  <div class="date">2020</div>
+                </div>
+                <div class="steps-container">
+                  <div class="content">
+                    <h2>Instarent</h2>
+                    <p>Full Stack Engineer</p>
+                  </div>
+                  <i class="step-line"></i>
+                  <div class="date">2020</div>
+                </div>
+                <div class="steps-container">
+                  <div class="content">
+                    <h2>Sahastra Packaging Pvt. Ltd</h2>
+                    <p>Application Developer</p>
+                  </div>
+                  <i class="step-line"></i>
+                  <div class="date">2017</div>
+                </div>
+                <div class="steps-container">
+                  <div class="content">
+                    <h2>IBM</h2>
+                    <p>Software Engineer</p>
+                  </div>
+                  <i class="step-line"></i>
+                  <div class="date">2014</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div id="contact" class="content-region hide">
