--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 </head>
 
 <body>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
   <header id="header">
     <img id="logo" src="logo.png">
     <h1>Priya R Tripathi</h1>
@@ -55,7 +57,7 @@
         </div>
 
         <div id="about" class="content-region hide">
-          <h2>About</h2>
+          <h2>About me</h2>
           <p>
             I am Priya!
             I come from a city named Lucknow, Uttar Pradesh, India. I have travelled and lived in many places as a kid.
@@ -77,6 +79,17 @@
                   <div class="content">
                     <h2>Domain Group</h2>
                     <p>Software Engineer</p>
+                    <p style="font-family: 'Courier New', Courier, monospace; font-size:1ch;">
+                      Feature
+                      lead
+                      to integrate SSO for Pricefinder with other products in
+                      Domain
+                      ● Feature lead to bring one of the Pricefinder applications from old infra(EC2) to new infra(ECS)
+                      as part of
+                      microservice containerisation
+                      ● Optimizing Cache system of the main application in Pricefinder
+                      ● Improving logging and reporting using Kibana and Mixpanel, Grafana &
+                      Nagios</p>
                   </div>
                   <i class="step-line"></i>
                   <div class="date">2021</div>
@@ -85,6 +98,10 @@
                   <div class="content">
                     <h2>Shootsta</h2>
                     <p>Full Stack Engineer</p>
+                    <p style="font-family: 'Courier New', Courier, monospace; font-size:1ch;">
+                      Part of Elevate Video Pitch marketing mobile app working in the backend, developing
+                      Backend APIs in typescript and nodejs talking to android/ios app.
+                      Also I implemented Sendgrid and cross-email templating solution in the app.</p>
                   </div>
                   <i class="step-line"></i>
                   <div class="date">2020</div>
